[#178] Refactor css files to fix bugs when migrating to tw 4

--- a/wp-content/themes/wp-starter/blocks/alert-banner/style.css
+++ b/wp-content/themes/wp-starter/blocks/alert-banner/style.css
@@ -1,4 +1,4 @@
-@utility acf-block-alert-banner {
+.acf-block-alert-banner {
 	@apply flex gap-24 py-24 lg:gap-48;
 
 	.acf-block-inner__container {
