--- a/wp-content/themes/wp-starter/blocks/navigation-container/view.css
+++ b/wp-content/themes/wp-starter/blocks/navigation-container/view.css
@@ -1,21 +1,21 @@
-@utility acf-block-navigation-container {
-  @apply flex flex-col items-end gap-5 mobile-menu:w-auto w-full;
+.acf-block-navigation-container {
+	@apply mobile-menu:w-auto flex w-full flex-col items-end gap-5;
 
-  & > .acf-block-inner__container {
-    @apply mobile-menu:!flex;
-  }
-  &[x-data*='true'] > .acf-block-inner__container {
-    @apply max-mobile-menu:!flex;
-  }
+	& > .acf-block-inner__container {
+		@apply mobile-menu:!flex;
+	}
+	&[x-data*='true'] > .acf-block-inner__container {
+		@apply max-mobile-menu:!flex;
+	}
 
-  button.navigation-toggle[aria-rel='mobile-toggle'] {
-    @apply absolute inset-y-0 right-0 flex items-center justify-center w-32 h-32 text-black mobile-menu:hidden dark:text-white;
-  }
-  .acf-block-inner__container {
-    @apply pt-24 mobile-menu:pt-0 w-full mobile-menu:w-auto;
-  }
+	button.navigation-toggle[aria-rel='mobile-toggle'] {
+		@apply mobile-menu:hidden absolute inset-y-0 right-0 flex h-32 w-32 items-center justify-center text-black dark:text-white;
+	}
+	.acf-block-inner__container {
+		@apply mobile-menu:pt-0 mobile-menu:w-auto w-full pt-24;
+	}
 
-  .navigation-content {
-    @apply flex flex-row;
-  }
+	.navigation-content {
+		@apply flex flex-row;
+	}
 }
