--- a/wp-content/themes/wp-starter/blocks/video-embed/style.css
+++ b/wp-content/themes/wp-starter/blocks/video-embed/style.css
@@ -1,28 +1,28 @@
-@utility acf-block-video-embed {
-  @apply relative;
-  & .wp-block-embed[data-block] {
-    @apply w-full;
-  }
+.acf-block-video-embed {
+	@apply relative;
+	& .wp-block-embed[data-block] {
+		@apply w-full;
+	}
 
-  & .wp-block-heading + p {
-    @apply mt-8;
-  }
+	& .wp-block-heading + p {
+		@apply mt-8;
+	}
 
-  & p + .wp-block-embed,
-  & .wp-block-heading + .wp-block-embed {
-    @apply mt-48;
-  }
+	& p + .wp-block-embed,
+	& .wp-block-heading + .wp-block-embed {
+		@apply mt-48;
+	}
 
-  &.alignfull > .wp-block-embed {
-    @apply px-0;
-  }
+	&.alignfull > .wp-block-embed {
+		@apply px-0;
+	}
 }
 
-@utility wp-block-embed__wrapper {
-  @apply relative;
+.wp-block-embed__wrapper {
+	@apply relative;
 
-  & iframe {
-    @apply aspect-video;
-    @apply size-full;
-  }
+	& iframe {
+		@apply aspect-video;
+		@apply size-full;
+	}
 }
