[#148] Updating css to the new classes

--- a/wp-content/themes/wp-starter/blocks/dialog/editor.css
+++ b/wp-content/themes/wp-starter/blocks/dialog/editor.css
@@ -1,8 +1,8 @@
 @layer components {
-	.acf-block-dialog {
+	.wp-block-acf-dialog {
 		@apply relative !border !border-black;
 		.inner {
-			@apply relative p-24;
+			@apply !relative p-24;
 		}
 
 		.acfbt-dialog-close {
