--- a/wp-content/themes/wp-starter/blocks/dialog/render.twig
+++ b/wp-content/themes/wp-starter/blocks/dialog/render.twig
@@ -13,19 +13,19 @@
 <div
 {% if function('is_admin') == false %}
 	x-data="{
-	openDialog: false,
+		openDialog: false,
 
-	// Close the dialog when the user clicks backdrop
-	handleDialogClick(event) {
-		(event.target === $refs.dialogRef) && this.handleDialogClose()
-	},
+		// Close the dialog when the user clicks backdrop
+		handleDialogClick(event) {
+			(event.target === $refs.dialogRef) && this.handleDialogClose();
+		},
 
-	// Delay close to allow for animation
-	handleDialogClose() {
-		if (!this.openDialog) return
-		this.openDialog = false
-		$refs.dialogRef.close()
-	}
+		// Delay close to allow for animation
+		handleDialogClose() {
+			if (!this.openDialog) return;
+			this.openDialog = false;
+			$refs.dialogRef.close();
+		}
 	}"
 {% endif %}
 >
