--- a/wp-content/themes/wp-starter/blocks/dialog/view.css
+++ b/wp-content/themes/wp-starter/blocks/dialog/view.css
@@ -5,14 +5,14 @@
 	}
 
 	.acf-block-dialog {
-		@apply bottom-0 left-0 right-0 top-0 !m-auto h-1/2 w-1/2 rounded border-none bg-white;
+		@apply top-0 right-0 bottom-0 left-0 !m-auto h-1/2 w-1/2 rounded border-none bg-white;
 
 		&::backdrop {
 			@apply bg-black/70;
 		}
 
 		.acf-dialog-close {
-			@apply absolute right-12 top-12 z-10 m-auto size-32 cursor-pointer border border-none border-black bg-transparent hover:bg-black;
+			@apply absolute top-12 right-12 z-10 m-auto size-32 cursor-pointer border border-none border-black bg-transparent hover:bg-black;
 			@apply after:flex after:items-center after:justify-center after:text-black after:content-['\2715'] hover:after:text-white;
 		}
 
