[#148] Fixing overlay bug in editor

--- a/wp-content/themes/wp-starter/blocks/dialog/editor.css
+++ b/wp-content/themes/wp-starter/blocks/dialog/editor.css
@@ -1,6 +1,11 @@
 @layer components {
 	.wp-block-acf-dialog {
 		@apply relative !border !border-black;
+
+		.acf-block-dialog {
+			@apply !relative;
+		}
+
 		.inner {
 			@apply !relative p-24;
 		}
