[#178] Adding gap to nav items

--- a/wp-content/themes/wp-starter/src/styles/core-blocks/navigation.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/navigation.css
@@ -7,7 +7,7 @@
 	}
 
 	.wp-block-navigation {
-		@apply mobile-menu:w-auto mobile-menu:flex-row flex w-full flex-col;
+		@apply mobile-menu:w-auto mobile-menu:flex-row flex w-full flex-col gap-24;
 
 		/* Hide WP defaults */
 		.wp-block-navigation__responsive-container-open,
