--- a/wp-content/themes/wp-starter/src/styles/base/global.css
+++ b/wp-content/themes/wp-starter/src/styles/base/global.css
@@ -1,50 +1,3 @@
-.entry-content {
-	/*
-		Adjust this to add space between blocks on a page.
-		Should be adjusted or removed as needed per project.
-	*/
-	& > *:not(:last-child) {
-		@apply mb-0;
-	}
-
-	& > *:not(.alignfull) {
-		@apply max-w-screen-container !mx-auto;
-	}
-}
-
-.is-layout-constrained {
-	& > .acf-block-inner__container {
-		@apply max-w-screen-container !mx-auto;
-	}
-
-	.block-editor-block-list__block .acf-block-inner__container > & {
-		@apply max-w-screen-container !mx-auto;
-	}
-	&.is-content-justification-right > .acf-block-inner__container {
-		@apply justify-end text-right;
-	}
-
-	&.is-content-justification-left > .acf-block-inner__container {
-		@apply justify-start text-left;
-	}
-}
-
-.acf-block-inner__container {
-	.is-layout-constrained > & {
-		@apply max-w-screen-container !mx-auto;
-	}
-
-	.block-editor-block-list__block & > .is-layout-constrained {
-		@apply max-w-screen-container !mx-auto;
-	}
-}
-
-.block-editor-block-list__block {
-	& .acf-block-inner__container > .is-layout-constrained {
-		@apply max-w-screen-container !mx-auto;
-	}
-}
-
 @layer base {
 	[x-cloak] {
 		@apply !hidden;
@@ -72,5 +25,33 @@
 
 	p:not(:empty):not(:last-child) {
 		@apply mb-24;
+	}
+}
+
+@layer components {
+	/*
+		Adjust this to add space between blocks on a page.
+		Should be adjusted or removed as needed per project.
+	*/
+	.entry-content > *:not(:last-child) {
+		@apply mb-0;
+	}
+
+	.entry-content > *:not(.alignfull),
+	.is-layout-constrained > .acf-block-inner__container,
+	.block-editor-block-list__block
+		.acf-block-inner__container
+		> .is-layout-constrained {
+		@apply max-w-screen-container !mx-auto;
+	}
+
+	.is-layout-constrained {
+		&.is-content-justification-right > .acf-block-inner__container {
+			@apply justify-end text-right;
+		}
+
+		&.is-content-justification-left > .acf-block-inner__container {
+			@apply justify-start text-left;
+		}
 	}
 }
