--- a/wp-content/themes/wp-starter/src/styles/core-blocks/quote.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/quote.css
@@ -1,5 +1,3 @@
-.wp-block-quote-is-layout-flow {
-	&blockquote {
-		@apply border-l border-solid border-black;
-	}
+blockquote.wp-block-quote-is-layout-flow {
+	@apply border-l border-solid border-black;
 }
