--- a/wp-content/themes/wp-starter/src/styles/base/global.css
+++ b/wp-content/themes/wp-starter/src/styles/base/global.css
@@ -1,6 +1,6 @@
 @layer base {
 	[x-cloak] {
-		@apply !hidden;
+		@apply hidden!;
 	}
 
 	ul.wp-block-list {
@@ -42,7 +42,7 @@
 	.block-editor-block-list__block
 		.acf-block-inner__container
 		> .is-layout-constrained {
-		@apply max-w-screen-container !mx-auto;
+		@apply max-w-screen-container mx-auto!;
 	}
 
 	.is-layout-constrained {
