--- a/wp-content/themes/wp-starter/blocks/accordion/style.css
+++ b/wp-content/themes/wp-starter/blocks/accordion/style.css
@@ -3,7 +3,7 @@
 		@apply border-t px-4 last-of-type:border-b;
 
 		> summary {
-			@apply relative my-12 flex cursor-pointer justify-between py-12 pr-24 text-base font-bold;
+			@apply text-md relative my-12 flex cursor-pointer justify-between py-12 pr-24 font-bold;
 			@apply marker:content-none focus-visible:outline-none;
 			@apply after:absolute after:top-0 after:right-0 after:bottom-0 after:flex after:items-center after:font-mono after:text-lg after:content-['\002B'];
 			@apply hover:text-black hover:after:text-black;
