[#178] Package updates | Tailwind, Vite, Node, & npm (#180)
* [#178] Updating Vite to v7

* [#178] Updating all other npm pages but TW

* [#178] Updating TW to version 4

* [#178] Revert TW upgrade

* [#178] Updating to Tailwind 4

* [#178] Refactoring the theme-json for TW 4

* [#178] Refactoring and fixing errors with theme-json

* [#178] Refactor css files to fix bugs when migrating to tw 4

* [#178] Updating node and npm version. Removing unused packages

* [#178] prettier fixes

* [#178] Removing more unused npm packages

* [#178] Fixing css files from TW migration

* [#178] Adding gradient color

* [#178] Updating the version number and readme with change log note

* [#178] Adding gap to nav items

* [#178] Wrapping global style in components

* [#178] PR refactor, updating deploy node version, tw var names

* [#178] Removing opinionated styles

* [#178] Rebased with main and changing back to text-md

* [#178] Reverting the css for the list style

--- a/wp-content/themes/wp-starter/blocks/alert-banner/style.css
+++ b/wp-content/themes/wp-starter/blocks/alert-banner/style.css
@@ -1,33 +1,31 @@
-@layer components {
-	.acf-block-alert-banner {
-		@apply flex gap-24 py-24 lg:gap-48;
+.acf-block-alert-banner {
+	@apply flex gap-24 py-24 lg:gap-48;
 
-		.acf-block-inner__container {
-			@apply m-auto flex w-full flex-col items-start gap-24 text-sm sm:flex-wrap md:flex-row md:items-center md:py-0 lg:items-center lg:gap-48;
+	.acf-block-inner__container {
+		@apply m-auto flex w-full flex-col items-start gap-24 text-sm sm:flex-wrap lg:items-center lg:gap-48;
 
-			.wp-block-button .wp-block-button__link {
-				@apply border-black text-sm text-black;
-				@apply hover:bg-black hover:text-white;
-			}
+		.wp-block-button .wp-block-button__link {
+			@apply border-black text-sm text-black;
+			@apply hover:bg-black hover:text-white;
 		}
+	}
 
-		&.is-style-dismissible {
-			@apply relative;
+	&.is-style-dismissible {
+		@apply relative;
 
-			.dismiss {
-				@apply z-10 m-auto size-24 cursor-pointer border border-none border-black bg-transparent md:inset-y-0 lg:absolute lg:right-16;
-				@apply after:flex after:items-center after:justify-center after:text-black after:content-['\2715'];
-			}
+		.dismiss {
+			@apply z-10 m-auto size-24 cursor-pointer border border-none border-black bg-transparent lg:absolute lg:right-16;
+			@apply after:flex after:items-center after:justify-center after:text-black after:content-['\2715'];
 		}
+	}
 
-		&:not(.is-style-dismissible) {
-			& .dismiss {
-				@apply hidden;
-			}
+	&:not(.is-style-dismissible) {
+		& .dismiss {
+			@apply hidden;
 		}
+	}
 
-		& > p {
-			@apply flex-1;
-		}
+	& > p {
+		@apply flex-1;
 	}
 }
