--- a/wp-content/themes/wp-starter/blocks/text-image/style.css
+++ b/wp-content/themes/wp-starter/blocks/text-image/style.css
@@ -1,22 +1,20 @@
-@layer components {
-	.acf-block-text-image {
-		.wp-block-media-text {
-			@apply gap-fluid-sm;
+.acf-block-text-image {
+	.wp-block-media-text {
+		@apply gap-fluid-sm;
+	}
+	.wp-block-media-text__media {
+		@apply w-full;
+	}
+
+	.wp-block-media-text__content {
+		@apply flex flex-col items-start gap-16 p-0;
+
+		.is-style-eyebrow {
+			@apply m-0 text-sm uppercase;
 		}
-		.wp-block-media-text__media {
-			@apply w-full;
-		}
 
-		.wp-block-media-text__content {
-			@apply flex flex-col items-start gap-16 p-0;
-
-			.is-style-eyebrow {
-				@apply m-0 text-sm font-bold uppercase tracking-tighter;
-			}
-
-			.wp-block-heading {
-				@apply m-0 text-lg font-bold leading-tight;
-			}
+		.wp-block-heading {
+			@apply m-0 text-lg;
 		}
 	}
 }
