--- a/wp-content/themes/wp-starter/blocks/accordion/style.css
+++ b/wp-content/themes/wp-starter/blocks/accordion/style.css
@@ -1,26 +1,24 @@
-@layer components {
-	.acf-block-accordion {
-		& details.wp-block-details {
-			@apply border-t px-4 last-of-type:border-b;
+.acf-block-accordion {
+	& details.wp-block-details {
+		@apply border-t px-4 last-of-type:border-b;
+
+		> summary {
+			@apply text-md relative my-12 flex cursor-pointer justify-between py-12 pr-24 font-bold;
+			@apply marker:content-none focus-visible:outline-none;
+			@apply after:absolute after:top-0 after:right-0 after:bottom-0 after:flex after:items-center after:font-mono after:text-lg after:content-['\002B'];
+			@apply hover:text-black hover:after:text-black;
+			@apply focus-visible:text-black focus-visible:outline-black focus-visible:after:text-black;
+
+			&::-webkit-details-marker {
+				@apply hidden;
+			}
+		}
+
+		&[open] {
+			@apply pb-24;
 
 			> summary {
-				@apply relative my-12 flex cursor-pointer justify-between py-12 pr-24 text-base font-bold;
-				@apply marker:content-none focus:outline-none;
-				@apply after:absolute after:bottom-0 after:right-0 after:top-0 after:flex after:items-center after:font-mono after:text-lg after:content-['\002B'];
-				@apply hover:text-black hover:after:text-black;
-				@apply focus:text-black focus:outline-black focus:after:text-black;
-
-				&::-webkit-details-marker {
-					@apply hidden;
-				}
-			}
-
-			&[open] {
-				@apply pb-24;
-
-				> summary {
-					@apply after:text-black after:content-['\2212'];
-				}
+				@apply after:text-black after:content-['\2212'];
 			}
 		}
 	}
