--- a/wp-content/themes/wp-starter/src/styles/core-blocks/buttons.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/buttons.css
@@ -1,52 +1,48 @@
-@layer utilities {
-	.btn-base {
-		@apply inline-flex items-center transition text-base gap-12 rounded-none;
-		@apply focus:outline-none focus-visible:ring-4;
-		@apply disabled:opacity-20 disabled:pointer-events-none;
-		@apply px-20 min-h-40;
+@utility btn-base {
+	@apply text-md inline-flex items-center gap-12 rounded-none transition;
+	@apply focus-visible:ring-4 focus-visible:outline-none;
+	@apply disabled:pointer-events-none disabled:opacity-20;
+	@apply min-h-40 px-20;
 
-		& svg {
-			@apply size-20;
-		}
-	}
-
-	.btn-default {
-		@apply btn-base;
-		@apply bg-black text-white;
-		@apply hover:bg-black active:bg-black focus-visible:bg-black focus-visible:ring-black;
-	}
-
-	.btn-outline {
-		@apply btn-base;
-		@apply border border-current bg-transparent text-black;
-		@apply hover:bg-black/5 hover:border-black hover:text-black;
-		@apply active:bg-black/15 active:text-black;
-		@apply focus-visible:bg-black/10 focus-visible:ring-black/15;
+	& svg {
+		@apply size-20;
 	}
 }
 
-@layer components {
-	.wp-block-button {
+@utility btn-default {
+	@apply btn-base;
+	@apply bg-black text-white;
+	@apply hover:bg-black focus-visible:bg-black focus-visible:ring-black active:bg-black;
+}
+
+@utility btn-outline {
+	@apply btn-base;
+	@apply border border-current bg-transparent text-black;
+	@apply hover:border-black hover:bg-black/5 hover:text-black;
+	@apply active:bg-black/15 active:text-black;
+	@apply focus-visible:bg-black/10 focus-visible:ring-black/15;
+}
+
+.wp-block-button {
+	.wp-block-button__link {
+		@apply btn-default;
+	}
+
+	&.is-style-outline {
 		.wp-block-button__link {
-			@apply btn-default;
+			@apply btn-outline;
 		}
+	}
 
-		&.is-style-outline {
-			.wp-block-button__link {
-				@apply btn-outline;
-			}
+	&.is-style-icon-only {
+		.wp-block-button__link {
+			@apply text-zero gap-0;
 		}
+	}
 
-		&.is-style-icon-only {
-			.wp-block-button__link {
-				@apply text-zero gap-0;
-			}
-		}
-
-		&.is-style-plain {
-			.wp-block-button__link {
-				@apply border-0 bg-transparent px-0 text-black rounded-none;
-			}
+	&.is-style-plain {
+		.wp-block-button__link {
+			@apply rounded-none border-0 bg-transparent px-0 text-black;
 		}
 	}
 }
