--- a/wp-content/themes/wp-starter/src/styles/core-blocks/list.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/list.css
@@ -1,5 +1,3 @@
-@layer components {
-	[data-type="core/list-item"] .block-editor-rich-text__editable.rich-text {
-		@apply inline-block;
-	}
+[data-type='core/list-item'] .block-editor-rich-text__editable.rich-text {
+	@apply inline-block;
 }
