[N/A] Plop file and README Updates

--- a/wp-content/themes/wp-starter/src/plop-templates/block.json.hbs
+++ b/wp-content/themes/wp-starter/src/plop-templates/block.json.hbs
@@ -4,28 +4,9 @@
   "description": "Displays the {{titleCase name}}",
   "icon": "block-default",
   "category": "components",
-  "textdomain": "{{dashCase themeslug}}",
+  "textdomain": "{{dashCase textdomain}}",
   "keywords": ["{{dashCase name}}"],
   "allowedBlocks": [],
-  "attributes": {
-    "align": {
-      "type": "string",
-      "default": "full"
-    },
-    "style": {
-      "type": "object",
-      "default": {
-        "spacing": {
-          "padding": {
-            "top": "var:preset|spacing|20",
-            "bottom": "var:preset|spacing|20",
-            "left": "var:preset|spacing|20",
-            "right": "var:preset|spacing|20"
-         }
-        }
-      }
-    }
-  },
   "supports": {
     "jsx": true,
     "mode": false,
