--- a/wp-content/themes/wp-starter/src/styles/tailwind.css
+++ b/wp-content/themes/wp-starter/src/styles/tailwind.css
@@ -1,7 +1,8 @@
 @import 'tailwindcss';
 @import './tailwind/colors.css';
 @import './tailwind/spacing.css';
-@import './tailwind/text.css';
+@import './tailwind/typography.css';
+@import './tailwind/images.css';
 
 /* Dark theme to be driven by a CSS selector instead of the prefers-color-scheme media query */
 @custom-variant dark (&:where(.dark, .dark *));
@@ -11,11 +12,7 @@
 	Add more variables here, but if they start to get long, move them to their own file.
 */
 @theme {
-	/* Aspect Ratios */
-	--aspect-ratio-5/3: 5/3;
-	--aspect-ratio-5/4: 5/4;
-
-	/* Screens */
+	/* Screens (breakpoints) */
 	--breakpoint-container: 1200px;
 	--breakpoint-content-wide: 900px;
 	--breakpoint-wp-cols: 781px;
@@ -27,6 +24,6 @@
 	--flex-basis-1/3-gap: calc((100% / 3) - var(--wp--style--block-gap));
 	--flex-basis-1/4-gap: calc((100% / 4) - var(--wp--style--block-gap));
 
-	/* Radius */
+	/* Rounded Corners */
 	--radius-default: 0.5rem;
 }
