[N/A] Added classes/variants to check when menu open/closed

--- a/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
+++ b/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
@@ -60,6 +60,7 @@
 	<div
 		{% if function('is_admin') == false %}
 			x-show="menuIsOpen"
+			:class="{ 'menu-hidden': !menuIsOpen }"
 			@click.away="menuIsOpen = false"
 		{% endif %}
 		class="acf-block-inner__container"
