[N/A] Various automation and theme-json fixes

--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -1,4 +1,5 @@
-@import-glob './tailwind.css';
+@import './tailwind/tailwind.css';
+
 @import-glob './base/*.css';
 @import-glob './layout/*.css';
 @import-glob './core-blocks/*.css';
